--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,6 +7,11 @@
             <input type="text" id="post-title" name="post-title" />
         </div>
 
+        <div >
+          <label for="post_contents"> Contents</label>
+          <input type="text" id="post_contents" name="post_contents"/>
+        </div>
+        
         <button type="submit" class="btn">Create</button>
     </form>
 </section>
