--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -3,6 +3,10 @@
         <span>({{post_title}})</span>
     </div>
     
+    <div class="contents">
+        <p> {{post_contents}}</p>
+    </div>
+    
     <div class="meta">
         By {{user.username}} on {{format_date created_at}}
         |
