--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,7 +22,7 @@
   <ol>
     {{#each posts as |post|}}
     <li>
-      {{> post-info post}}
+      {{> posts post}}
       <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
     </li>
     {{/each}}
