--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,25 +9,24 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div>
     <header>
-      <h1>
-        <a href="/">MVC Blog</a>
-      </h1>
       <nav>
           {{#if loggedIn}}
+          <a href="/">Home</a>
           <a href="/dashboard">Dashboard</a>
-          <button id="logout" class="btn-no-style">Logout</button>
+          <button class="link" id="logout">Logout</button>
           {{else}}
           <a href="/login">Login</a>
           {{/if}}
       </nav>
+      <h1>MVC Blog</h1>
     </header>
     <main>
       {{{ body }}}
     </main>
     <footer>
-      Have a good one!
+      <a href="https://dragoonkite.github.io/portfolio/" target="_blank">Have a good one!</a>
     </footer>
   </div>
 
