--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -1,15 +1,10 @@
 <article class="post">
-    <div class="title">
-        <span>({{post_title}})</span>
+    <div class="title indent">
+        <a href="/post/{{id}}">{{title}}</a>
+        <span class="meta">By {{user.username}} on {{format_date created_at}}</span> 
     </div>
     
-    <div class="contents">
+    <div class="contents indent">
         <p> {{post_contents}}</p>
-    </div>
-    
-    <div class="meta">
-        By {{user.username}} on {{format_date created_at}}
-        |
-        <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
     </div>
 </article>
