--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,10 @@ button {
     background: transparent;
 }
 
+form {
+    padding-left: 30px;
+}
+
 h1 {
     text-align: center;
     width: 15%;
@@ -36,6 +40,11 @@ h1 {
     border-radius: 10px;
     background-color: rgb(119, 189, 119);
     margin-bottom: 5px;
+}
+
+h2 {
+    margin-top: 0px;
+    margin-left: 15px;
 }
 
 header {
@@ -53,11 +62,45 @@ main, footer {
     background-color: rgb(119, 189, 119);
 }
 
+ol {
+    margin-bottom: 0px;
+}
+
+section {
+    margin-right: 30px;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    overflow: scroll;
+}
+
 ul {
     list-style-type: none;
     margin-top: 0px;
     margin-bottom: 0px;
     width: 85%;
+}
+
+.comment {
+    margin-left: 30px;
+    border-style: solid;
+    border-radius: 15px;
+    border-color: black;
+    padding-bottom: 15px;
+}
+
+.comment-meta {
+    text-decoration-line: underline;
+}
+
+.comment-meta, .comment-text {
+    padding-left: 15px;
 }
 
 .indent {
@@ -82,3 +125,10 @@ ul {
     display: flex;
 }
 
+.title-input {
+    padding-bottom: 20px;
+}
+
+#post-title {
+    margin-left: 27px;
+}
