--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,14 +2,14 @@
     <h2>Create A New Blog Post</h2>
     
     <form class="new-post-form">
-        <div>
+        <div class="title-input">
             <label for="post-title">Title</label>
             <input type="text" id="post-title" name="post-title" />
         </div>
 
         <div >
-          <label for="post_contents"> Contents</label>
-          <input type="text" id="post_contents" name="post_contents"/>
+          <label for="post-contents"> Contents</label>
+          <textarea type="text" id="post-contents" name="post-contents"></textarea>
         </div>
         
         <button type="submit" class="btn">Create</button>
@@ -30,4 +30,4 @@
 </section>
 {{/if}}
 
-<script src="/javascript/add-post.js"></script>
+<script src="/javascript/new-post.js"></script>
