--- a/views/individual-post.handlebars
+++ b/views/individual-post.handlebars
@@ -15,5 +15,5 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
+<script src="/javascript/comments.js"></script>
 {{/if}}
