added edit post functionality

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,6 +103,10 @@ ul {
     padding-left: 15px;
 }
 
+.edit-link {
+    background-color: black;
+}
+
 .indent {
     padding-left: 20px;
     padding-right: 20px;
