--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -1,7 +1,7 @@
 <article class="post">
     <div class="title indent">
         <a href="/post/{{id}}">{{title}}</a>
-        <span class="meta">By {{user.username}} on {{format_date created_at}}</span> 
+        <span class="meta">Published by {{user.username}} on {{format_date created_at}}</span> 
     </div>
     
     <div class="contents indent">
