--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
 
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    <script src="/javascript/idle.js"></script>
     {{/if}}
 </body>
 
